--- a/AutoInvoke.Generator/.editorconfig
+++ b/AutoInvoke.Generator/.editorconfig
@@ -60,7 +60,7 @@ csharp_space_around_binary_operators = before_and_after
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
 indent_size = 4
-end_of_line = lf
+end_of_line = crlf
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
