--- a/AutoInvoke.Generator/AutoInvoke.Generator.Benchmarks/AutoInvoke.Generator.Benchmarks.csproj
+++ b/AutoInvoke.Generator/AutoInvoke.Generator.Benchmarks/AutoInvoke.Generator.Benchmarks.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -9,14 +9,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
-		<PackageReference Include="F0.CodeAnalysis.CSharp.IncrementalGenerator.Benchmarking" Version="0.2.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.3.1" />
+		<PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+		<PackageReference Include="F0.CodeAnalysis.CSharp.IncrementalGenerator.Benchmarking" Version="0.3.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AutoInvoke.Generator\AutoInvoke.Generator.csproj" PrivateAssets="all"
-						  />
+		<ProjectReference Include="..\AutoInvoke.Generator\AutoInvoke.Generator.csproj" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
