--- a/AutoInvoke.Generator/AutoInvoke.Generator.UnitTests/AutoInvoke.Generator.UnitTests.csproj
+++ b/AutoInvoke.Generator/AutoInvoke.Generator.UnitTests/AutoInvoke.Generator.UnitTests.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net472</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
+    <!--<TargetFrameworks>net6.0;net472</TargetFrameworks>-->
     <LangVersion>default</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
